# ndk

./: .gitignore  README.md  build.gradle  settings.gradle
aac/: CMakeLists.txt  build.gradle
aac/src/androidTest/java/top/andnux/aac/: ExampleInstrumentedTest.java
aac/src/main/: AndroidManifest.xml
aac/src/main/res/values/: strings.xml
aac/src/test/java/top/andnux/aac/: ExampleUnitTest.java
app/: build.gradle
app/src/androidTest/java/top/andnux/ndk/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/top/andnux/ndk/: MainActivity.java
app/src/test/java/top/andnux/ndk/: ExampleUnitTest.java
breakpad/: CMakeLists.txt  build.gradle
breakpad/src/androidTest/java/top/andnux/breakpad/: ExampleInstrumentedTest.java
breakpad/src/main/: AndroidManifest.xml
breakpad/src/main/cpp/: CMakeLists.txt  native-lib.cpp
breakpad/src/main/cpp/common/: memory_allocator.h
breakpad/src/main/cpp/common/linux/: memory_mapped_file.cc
breakpad/src/main/java/top/andnux/breakpad/: BreakPad.java
breakpad/src/test/java/top/andnux/breakpad/: ExampleUnitTest.java
bspatch/: CMakeLists.txt  build.gradle
bspatch/src/androidTest/java/top/andnux/libbspatch/: ExampleInstrumentedTest.java
bspatch/src/main/: AndroidManifest.xml
bspatch/src/main/cpp/: bspatch.c
bspatch/src/main/java/top/andnux/bspatch/: Bspatch.java
bspatch/src/main/res/values/: strings.xml
bspatch/src/test/java/top/andnux/libbspatch/: ExampleUnitTest.java
ffmpeg/: CMakeLists.txt  build.gradle
ffmpeg/src/androidTest/java/top/andnux/libffmpeg/: ExampleInstrumentedTest.java
ffmpeg/src/main/: AndroidManifest.xml
ffmpeg/src/main/cpp/: cmdutils.c  config.h  ffmpeg.c  ffmpeg.h  ffmpeg_opt.c  native.c
ffmpeg/src/main/java/top/andnux/ffmpeg/: FFmpeg.java
ffmpeg/src/test/java/top/andnux/libffmpeg/: ExampleUnitTest.java
fmod/: CMakeLists.txt  build.gradle
fmod/src/androidTest/java/top/andnux/fmod/: ExampleInstrumentedTest.java
fmod/src/main/: AndroidManifest.xml
fmod/src/main/cpp/: fmods.cpp
fmod/src/main/java/top/andnux/fmod/: FMODS.java
fmod/src/test/java/top/andnux/fmod/: ExampleUnitTest.java
glide/: CMakeLists.txt  build.gradle
glide/src/androidTest/java/top/andnux/glide/: ExampleInstrumentedTest.java
glide/src/main/: AndroidManifest.xml
glide/src/main/java/com/bumptech/glide/: GeneratedAppGlideModuleImpl.java  GeneratedRequestManagerFactory.java
glide/src/main/java/top/andnux/glide/: FrameSequenceDecoder.java  FrameSequenceDrawableResource.java  GifExtensions.java  GlideApp.java  GlideGifModule.java  GlideOptions.java  GlideRequest.java  GlideRequests.java
glide/src/test/java/top/andnux/glide/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
jpeg/: CMakeLists.txt
jpeg/src/androidTest/java/top/andnux/jpeg/: ExampleInstrumentedTest.java
jpeg/src/main/: AndroidManifest.xml
jpeg/src/main/cpp/: jpeg_native.c
jpeg/src/main/cpp/libjpeg/: cjpeg.c  djpeg.c  jpeglib.h  jpegtran.c  rdjpgcom.c  wrjpgcom.c
lame/: CMakeLists.txt  build.gradle
lame/src/androidTest/java/top/andnux/lame/: ExampleInstrumentedTest.java
lame/src/main/: AndroidManifest.xml
lame/src/main/cpp/: lame.c
lame/src/main/cpp/lame/: lame.h
lame/src/main/java/top/andnux/lame/: ConvertUtil.java  LameAudioRecord.java  LameNative.java
lame/src/test/java/top/andnux/lame/: ExampleUnitTest.java
rtmp/: CMakeLists.txt  build.gradle
rtmp/libs/include/openssl/: opensslconf.h
rtmp/src/androidTest/java/top/andnux/rtmp/: ExampleInstrumentedTest.java
rtmp/src/main/: AndroidManifest.xml
rtmp/src/main/cpp/rtmp/: amf.c  amf.h  dh.h  handshake.h  hashswf.c  log.c  log.h  parseurl.c  rtmp.c  rtmp.h  rtmp_sys.h
rtmp/src/test/java/top/andnux/rtmp/: ExampleUnitTest.java
soundtouch/: CMakeLists.txt  build.gradle
soundtouch/src/androidTest/java/top/andnux/libsoundtouch/: ExampleInstrumentedTest.java
soundtouch/src/main/: AndroidManifest.xml
soundtouch/src/main/cpp/: soundtouch.cpp
soundtouch/src/main/cpp/soundtouch/: SoundTouch.cpp
soundtouch/src/main/java/top/andnux/soundtouch/: SoundTouch.java
soundtouch/src/main/res/values/: strings.xml
soundtouch/src/test/java/top/andnux/libsoundtouch/: ExampleUnitTest.java
x264/: CMakeLists.txt  build.gradle
x264/libs/include/: x264.h
x264/src/androidTest/java/top/andnux/x264/: ExampleInstrumentedTest.java
x264/src/main/: AndroidManifest.xml
x264/src/main/cpp/: test.c
x264/src/main/res/values/: strings.xml
x264/src/test/java/top/andnux/x264/: ExampleUnitTest.java
yuv/: CMakeLists.txt  build.gradle
yuv/src/androidTest/java/top/andnux/yuv/: ExampleInstrumentedTest.java
yuv/src/main/: AndroidManifest.xml
yuv/src/main/cpp/: yuv.cpp
yuv/src/main/cpp/yuv/: compare.cc  compare_common.cc  compare_gcc.cc  compare_mmi.cc  compare_msa.cc  compare_neon.cc  compare_neon64.cc  compare_win.cc  convert.cc  convert_argb.cc  convert_from.cc  convert_from_argb.cc  convert_jpeg.cc  convert_to_argb.cc  convert_to_i420.cc  cpu_id.cc  mjpeg_decoder.cc  mjpeg_validate.cc  planar_functions.cc  rotate.cc  rotate_any.cc  rotate_argb.cc  rotate_common.cc  rotate_gcc.cc  rotate_mmi.cc  rotate_msa.cc  rotate_neon.cc  rotate_neon64.cc  rotate_win.cc  row_any.cc  row_common.cc  row_gcc.cc  row_mmi.cc  row_msa.cc  row_neon.cc  row_neon64.cc  row_win.cc  scale.cc  scale_any.cc  scale_argb.cc  (+8 more)
yuv/src/main/cpp/yuv/include/libyuv/: compare.h  compare_row.h  convert.h  convert_argb.h  convert_from.h  convert_from_argb.h  cpu_id.h  mjpeg_decoder.h  planar_functions.h  rotate.h  rotate_argb.h  rotate_row.h  row.h  scale.h  scale_argb.h  scale_row.h  video_common.h
yuv/src/main/java/top/andnux/yuv/: YuvManager.java
yuv/src/test/java/top/andnux/yuv/: ExampleUnitTest.java
zbar/: CMakeLists.txt  bintray.gradle  build.gradle
zbar/src/main/: AndroidManifest.xml
zbar/src/main/cpp/: zbarjni.c
zbar/src/main/cpp/zbar/qrcode/: bch15_5.c
zbar/src/main/java/top/andnux/zbar/: Config.java  Image.java  ImageScanner.java  Modifier.java  Orientation.java  Symbol.java  SymbolIterator.java  SymbolSet.java
(+2 files in other folders)
